# django_tiptap

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build.yaml
django_tiptap/: __init__.py  apps.py  asgi.py  config.py  fields.py  manage.py  settings.py  widgets.py  wsgi.py
django_tiptap/django_tiptap/: settings.py  urls.py
django_tiptap/static/css/: styles-min.css  styles.css
django_tiptap/static/django_tiptap/css/: styles-min.css  styles.css
django_tiptap/templates/forms/: tiptap_textarea.html
django_tiptap/tiptap/: admin.py  apps.py  fields.py  models.py  widgets.py
django_tiptap/tiptap/migrations/: 0001_initial.py  0002_alter_note_content.py  0003_note_blueprint.py
django_tiptap/tiptap/static/css/: styles.min-min.css  styles.min.css
django_tiptap/tiptap/static/html/: index.html
django_tiptap/tiptap/static/js/: testing.js  tiptap-min.js
django_tiptap/tiptap/templates/admin/: note_admin_change_form.html
django_tiptap/tiptap/templates/forms/: tiptap_textarea.html
django_tiptap_demo/: manage.py  settings.py  urls.py  wsgi.py
django_tiptap_demo/demo_app/: admin.py  models.py  tests.py
django_tiptap_demo/demo_app/migrations/: 0001_initial.py  0002_note_somethingmore.py  0003_auto_20210630_1246.py  0004_alter_note_id.py
django_tiptap_demo/demo_app/static/my_custom_extension/: my_custom_extension.js
django_tiptap_demo/demo_app/templates/my_custom_extension/: my_custom_extension.css  my_custom_extension_button_config.js  my_custom_extension_toolbar_include.html
