[build-system]
requires = ["flit_core >=2,<4", "setuptools"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "django_tiptap"
author = "Jeet Mandaliya & Max Patzelt"
author-email = "django.tiptap@gmail.com"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
requires = [
    "Django >= 2.2",
]
requires-python=">=3.5"

[tool.flit.metadata.requires-extra]
dev = [
    "black",
    "isort",
    "pre-commit",
]

test = [
    "pytest",
]
